# public-file-browser-for-amazon-s3

./: .gitignore  CHANGELOG.md  README.md  THIRD-PARTY-LICENSES
docs/: DEPLOYMENT.md
sam/: .gitignore  template.yaml
sam/seed_s3_data/: app.py  pyproject.toml  requirements.txt
sam/tests/: pyproject.toml  requirements.txt
sam/tests/unit/: test_seed_s3_data.py
website/: index.html
website/css/: main.css
website/icon/: site.webmanifest
website/js/: main.js
