[tool.poetry]
name = "public_file_browser_for_amazon_s3_tests"
version = "0.1.0"
description = ""
authors = ["Caesar Kabalan <ckabalan@amazon.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.34.23"
crhelper = "^2.0.11"
loguru = "^0.7.2"
simplejson = "^3.19.2"
pytest = "^7.4.4"
moto = "^4.2.13"
coverage = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
